<resources>
    <string name="app_name">NT Art</string>
    <string name="about_text">NT Art is android application to create NT Art</string>
    <string name="website"></string>
    <string name="email"></string>

    <string name="more_app_url"></string>
    <string name="term_and_condition_url"></string>
    <string name="contact_us_url"></string>

    <string name="press_again_exit_app">Press again to exit</string>
    <string name="dialog_title_permission">Permission denied</string>
    <string name="dialog_content_permission">
        This feature required permission
        \nGo to permission setting ?
    </string>


    <!--ActivityMain string data -->
    <string name="menu_home">Project</string>
    <string name="menu_exported">Exported</string>
    <string name="menu_add">Add</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_setting">Setting</string>

    <!-- Time Ago string data -->
    <string name="just_now">Just now</string>
    <string name="a_minute_ago">A minute ago</string>
    <string name="minutes_ago">minute ago</string>
    <string name="an_hour_ago">An hour ago</string>
    <string name="hours_ago">Hours ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="days_ago">days ago</string>

    <string name="menu_folder_location">Folder Location</string>
    <string name="menu_push_notification">Push notification</string>
    <string name="menu_vibrate">Vibrate</string>
    <string name="menu_tnc">Terms &amp; condition</string>
    <string name="menu_rate_this">Rate this app</string>
    <string name="menu_more_app">More apps</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_intro">Introduction</string>
    <string name="menu_about">About</string>

    <string name="develop_by">develop by NT Art</string>
    <string name="app_version">Build Version</string>
    <string name="version_unknown">Unknown</string>


    <string name="title_activity_intro">Introduction</string>
    <!--Size three array below must be same -->
    <string-array name="about_title_array">
        <item>C R E A T E.</item>
        <item>E X P O R T.</item>
        <item>P U B L I S H.</item>
    </string-array>

    <string-array name="about_description_array">
        <item>Create your nft pixel art</item>
        <item>Export project to image</item>
        <item>Publish your works and earn</item>
    </string-array>

    <integer-array name="about_images_array">
        <item>@drawable/image_intro_1</item>
        <item>@drawable/image_intro_2</item>
        <item>@drawable/image_intro_3</item>
    </integer-array>
    <string name="Next">Next</string>
    <string name="Skip">Skip</string>
    <string name="LetsStart">Let\'s Start</string>

    <string name="unlimited_access_to_all">Unlimited access to all</string>
    <string name="excel_file_option">Excel file</string>
    <string name="excel_reader_file">Excel Reader File</string>
    <string name="continue_now">Continue Now</string>

    <string name="term_of_use_privacy_policy">Term of Use | Privacy Policy</string>
    <string name="pdf_reader_file">PDF Reader File</string>
    <string name="word_reader_file">Word Reader File</string>
    <string name="no_ads_and_best_experience">No ads and best experience</string>
    <string name="_3_day_s_free_trial_then_vnd_1_050_000_year_ncancel_anytime">3 Day’s Free Trial Then %1$s/6 Month Cancel Anytime</string>

</resources>