<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_20"
        android:layout_marginBottom="@dimen/spacing_8"
        android:background="@drawable/card_light"
        android:orientation="vertical"
        android:paddingVertical="@dimen/spacing_6">


        <LinearLayout
            android:id="@+id/lyt_folder_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_overlay"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="@dimen/spacing_50"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/spacing_6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_12"
                android:text="@string/menu_folder_location"
                android:textColor="@color/tx_dark"
                android:textSize="@dimen/txt_medium" />

            <TextView
                android:id="@+id/folder_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_12"
                android:text="Folder Location"
                android:textColor="@color/tx_soft"
                android:textSize="@dimen/txt_xsmall" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/spacing_20"
            android:background="@color/bg_field" />

        <LinearLayout
            android:id="@+id/lyt_tnc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_overlay"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="@dimen/spacing_50"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_tnc"
                android:textColor="@color/tx_dark"
                android:textSize="@dimen/txt_medium" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/PremiumUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_overlay"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="@dimen/spacing_50"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Premium"
                android:textColor="@color/tx_dark"
                android:textSize="@dimen/txt_medium" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/spacing_20"
            android:background="@color/bg_field" />

        <LinearLayout
            android:id="@+id/lyt_rate_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_overlay"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="@dimen/spacing_50"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_rate_this"
                android:textColor="@color/tx_dark"
                android:textSize="@dimen/txt_medium" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/spacing_20"
            android:background="@color/bg_field" />

        <LinearLayout
            android:id="@+id/lyt_more_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_overlay"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="@dimen/spacing_50"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_more_app"
                android:textColor="@color/tx_dark"
                android:textSize="@dimen/txt_medium" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/spacing_20"
            android:background="@color/bg_field" />

        <LinearLayout
            android:id="@+id/lyt_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_overlay"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="@dimen/spacing_50"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_contact_us"
                android:textColor="@color/tx_dark"
                android:textSize="@dimen/txt_medium"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/spacing_20"
            android:background="@color/bg_field" />

        <LinearLayout
            android:id="@+id/lyt_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_overlay"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="@dimen/spacing_50"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_intro"
                android:textColor="@color/tx_dark"
                android:textSize="@dimen/txt_medium"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/spacing_20"
            android:background="@color/bg_field" />

        <LinearLayout
            android:id="@+id/lyt_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_overlay"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:minHeight="@dimen/spacing_50"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_about"
                android:textColor="@color/tx_dark"
                android:textSize="@dimen/txt_medium" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_14"
        android:text="@string/develop_by"
        android:textColor="@color/tx_soft"
        android:textSize="@dimen/txt_medium" />

    <TextView
        android:id="@+id/build_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_4"
        android:textColor="@color/tx_soft"
        android:textSize="@dimen/txt_medium" />

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_56" />

</LinearLayout>