<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="6dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/bt_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_close"
                app:tint="@color/primary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="@dimen/spacing_34"
                android:layout_height="@dimen/spacing_34"
                app:tint="@color/primary"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_10"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textColor="@color/tx_dark"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/about_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/tx_dark"
                app:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="California"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/tx_soft" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/tx_soft" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/website"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/tx_soft" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:backgroundTint="@color/primary_light"
                    app:elevation="0dp"
                    app:fabSize="mini"
                    app:rippleColor="@android:color/white"
                    app:srcCompat="@drawable/ic_email"
                    app:tint="@android:color/white" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="0dp" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        app:backgroundTint="@color/primary_light"
                        app:elevation="0dp"
                        app:fabSize="mini"
                        app:rippleColor="@android:color/white"
                        app:srcCompat="@drawable/ic_public"
                        app:tint="@android:color/white" />


                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="10dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>